# pm_auto

./: MANIFEST.in  README.md  pyproject.toml  run_thread.py
examples/: run_thread.py  test_fan.py  test_rgb.py
pm_auto/: database.py  fan_control.py  i2c.py  logger.py  oled.py  pm_auto.py  ssd1306.py  utils.py  version.py  vibration_switch.py  ws2812.py
pm_auto/libs/: i2c.py  pironman_mcu.py  ssd1306.py
pm_auto/oled_page/: all.py  battery.py  disk.py  input.py  ips.py  oled_config.py  output.py  performance.py  power.py  power_off.py  uilts.py
pm_auto/services/: fan_service.py  oled_service.py  pi5_pwr_btn_service.py  pironman_mcu_service.py  spc_service.py  vibration_switch_service.py  ws2812_service.py
test/: byte_format.py  oled_icon_test.py  vibration_switch.py
