[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm_auto"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for monitoring Raspberry Pi system status"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  'adafruit-circuitpython-neopixel-spi',
  'adafruit_extended_bus',
  'smbus2',
  'psutil',
  'influxdb',
  'pillow',
  'gpiod',
]

[tool.setuptools]
packages = ["pm_auto"]

[project.urls]
"Homepage" = "https://github.com/sunfounder/pm_auto"
"Bug Tracker" = "https://github.com/sunfounder/pm_auto/issues"

[tool.setuptools.dynamic]
version = {attr = "pm_auto.__version__"}