[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm_auto"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for monitoring Raspberry Pi system status"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  'adafruit-circuitpython-neopixel-spi',
  'smbus2',
  'psutil',
  'influxdb',
  'Pillow',
  'gpiod',
  'gpiozero',
  'rpi.lgpio',
]

[tool.setuptools]
packages = [
  "pm_auto",
  "pm_auto.libs",
  "pm_auto.services",
  "pm_auto.oled_page",
  ]

[project.urls]
"Homepage" = "https://github.com/sunfounder/pm_auto"
"Bug Tracker" = "https://github.com/sunfounder/pm_auto/issues"

[tool.setuptools.dynamic]
version = {attr = "pm_auto.__version__"}